fix/user-summary-label-overflow

--- a/src/styleSheets/userSummaryLabel.scss
+++ b/src/styleSheets/userSummaryLabel.scss
@@ -132,7 +132,9 @@ label.group-menu-label.group-menu-summary {
   .allocation {
     display: flex;
     padding: 8px 0px;
+    text-align: left;
     align-items: center;
+    justify-content: space-between;
 
     span {
       font-size: 14px;
@@ -141,6 +143,17 @@ label.group-menu-label.group-menu-summary {
       line-height: 20px;
       letter-spacing: 0px;
       text-align: left;
+    }
+
+    .name{
+      text-align: left;
+      flex-grow: 1;
+      flex-shrink: 1;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      width: 60px;
+      display: block;
+      overflow: hidden
     }
 
     span.amount {
@@ -153,6 +166,7 @@ label.group-menu-label.group-menu-summary {
     }
 
     .paidbackBtn {
+      min-width: 74px;
       padding: 0px 22px;
       font-size: 14px;
       font-weight: bold;
